Prevent all hover flickering for overlaid report link, normal cursor behaviour for anchors without hrefs, restored default texts

--- a/static/css/main-bootstrap.css
+++ b/static/css/main-bootstrap.css
@@ -163,6 +163,10 @@ body {
    background-color: white;
 }
 
+a:hover {
+   cursor:pointer;
+}
+
 .container {
    max-width: 970px;
    padding-left: 0;
